--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <!-- Mirrored from www.geocities.ws/ribafsindex/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 30 Apr 2018 10:42:18 GMT -->
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Sites pessoais de Ribamar FS</title>
 </head>
 <body><script type="text/javascript" src="../js/policy.js"></script>
