--- a/RedeCompartilhandoModem.html
+++ b/RedeCompartilhandoModem.html
@@ -15,7 +15,7 @@
 
 <B><FONT SIZE=4><P ALIGN="CENTER">REDE LOCAL DE MICROCOMPUTADORES IBM PC</P>
 <P ALIGN="CENTER"></P>
-</FONT><P ALIGN="JUSTIFY">UMA REDE BARATA – CABO COAXIAL</P>
+</FONT><P ALIGN="JUSTIFY">UMA REDE BARATA - CABO COAXIAL</P>
 </B><P ALIGN="JUSTIFY"></P>
 <P ALIGN="JUSTIFY">(Para uma pequena e mais confi&aacute;vel rede veja a de par tran&ccedil;ado abaixo.)</P>
 <P ALIGN="JUSTIFY"></P>
@@ -42,7 +42,7 @@
 <P ALIGN="JUSTIFY">- Conector BNC sold&aacute;vel</P>
 <P ALIGN="JUSTIFY">- T&ecirc;</P>
 <P ALIGN="JUSTIFY">- Terminador</P>
-<P ALIGN="JUSTIFY">- Conector BNC para Crimp (ou por press&atilde;o) – Este n&atilde;o &eacute; sold&aacute;vel, para sua conex&atilde;o utiliza-se um alicate de press&atilde;o apropriado (crimp).</P>
+<P ALIGN="JUSTIFY">- Conector BNC para Crimp (ou por press&atilde;o)  - Este n&atilde;o &eacute; sold&aacute;vel, para sua conex&atilde;o utiliza-se um alicate de press&atilde;o apropriado (crimp).</P>
 <P ALIGN="JUSTIFY">- Descascador de cabo</P>
 <P ALIGN="JUSTIFY">- Alicate para crimp</P>
 <P ALIGN="JUSTIFY"></P>
@@ -96,15 +96,15 @@
 
 <B><FONT SIZE=4><P ALIGN="JUSTIFY">CONFIGURANDO A REDE</P>
 </B></FONT>
-<P>Painel de Controle – Rede</P>
+<P>Painel de Controle  - Rede</P>
 
 <P>Devemos ter os seguintes itens:</P>
 
 <P>- Cliente para redes Microsoft</P>
 <P>- Adaptador para Rede Dial-Up</P>
-<P>- NetBEUI (Protocolo – Microsoft)</P>
-<P>- IPX/SPX (Protocolo – Microsoft)</P>
-<P>- TCP/IP (Protocolo – Microsoft)</P>
+<P>- NetBEUI (Protocolo  - Microsoft)</P>
+<P>- IPX/SPX (Protocolo  - Microsoft)</P>
+<P>- TCP/IP (Protocolo  - Microsoft)</P>
 <P>- Compartilhamento de arquivos e impressoras para rede Microsoft (Servi&ccedil;os)</P>
 
 <P>Ainda na tela de configura&ccedil;&atilde;o da Rede certifique-se de que o </P>
@@ -128,7 +128,7 @@
 </B><P ALIGN="JUSTIFY"></P>
 <P ALIGN="JUSTIFY">Obrigatoriamente deve ser o Windows98SE ou superior.</P>
 <P ALIGN="JUSTIFY"></P>
-<P ALIGN="JUSTIFY">- Painel de Controle – Adicionar – Instala&ccedil;&atilde;o do Windows – Ferramentas de Internet – Internet Connect Sharing</P>
+<P ALIGN="JUSTIFY">- Painel de Controle  - Adicionar  - Instala&ccedil;&atilde;o do Windows  - Ferramentas de Internet  - Internet Connect Sharing</P>
 <P ALIGN="JUSTIFY"></P>
 <P ALIGN="JUSTIFY">- Ser&aacute; pedido o disco de instala&ccedil;&atilde;o do Windows. </P>
 <P ALIGN="JUSTIFY"></P>
@@ -164,13 +164,13 @@
 <P ALIGN="JUSTIFY">O Windows 95 ou 98 j&aacute; traz um programa para troca de mensagens de micros ligados em rede. &Eacute; o winpopup.exe. Ele encontra-se na pasta c:\windows.</P>
 <P ALIGN="JUSTIFY">Como ele est&aacute; no &quot;path&quot;, basta que o chamemos de qualquer lugar:</P>
 <P ALIGN="JUSTIFY"></P>
-<P ALIGN="JUSTIFY">Iniciar – Executar – winpopup </P>
+<P ALIGN="JUSTIFY">Iniciar  - Executar  - winpopup </P>
 <P ALIGN="JUSTIFY"></P>
 <P ALIGN="JUSTIFY">O ideal, para quem vai utilizar com frequ&ecirc;ncia &eacute; criar um atalho para o mesmo, lembrando o caminho completo: c:\windows\winpopup.exe.</P>
 <P ALIGN="JUSTIFY"></P>
 <B><P ALIGN="JUSTIFY">MEDINDO O DESEMPENHO DA REDE</P>
 </B><P ALIGN="JUSTIFY"></P>
-<P ALIGN="JUSTIFY">System Monitor – este vem com o windows 95 ou 98.</P>
+<P ALIGN="JUSTIFY">System Monitor  - este vem com o windows 95 ou 98.</P>
 <P ALIGN="JUSTIFY"></P>
 <B><FONT SIZE=4><P ALIGN="JUSTIFY">CONCEITOS LIGADOS A REDES</P>
 </B></FONT><P ALIGN="JUSTIFY"></P>
@@ -182,49 +182,49 @@
 <P ALIGN="JUSTIFY">- A terceira eu gostaria de saber a fun&ccedil;&atilde;o :)</P>
 <P ALIGN="JUSTIFY">- A Quarta identifica cada esta&ccedil;&atilde;o da rede</P>
 <P ALIGN="JUSTIFY"></P>
-<B><P ALIGN="JUSTIFY">127.0.0.0</B> – este &eacute; um IP especial, utilizado para testes e para a comunica&ccedil;&atilde;o entre processos de uma m&aacute;quina.</P>
+<B><P ALIGN="JUSTIFY">127.0.0.0</B>  - este &eacute; um IP especial, utilizado para testes e para a comunica&ccedil;&atilde;o entre processos de uma m&aacute;quina.</P>
 <P ALIGN="JUSTIFY"></P>
-<B><P ALIGN="JUSTIFY">M&Aacute;SCARA</B> – Em redes locais o Host (servidor) recebe um ID (c&oacute;digo de Identifica&ccedil;&atilde;o) exclusivo e todas as esta&ccedil;&otilde;es (clientes) ter&atilde;o a m&aacute;scara 255.255.255.0.</P>
+<B><P ALIGN="JUSTIFY">M&Aacute;SCARA</B>  - Em redes locais o Host (servidor) recebe um ID (c&oacute;digo de Identifica&ccedil;&atilde;o) exclusivo e todas as esta&ccedil;&otilde;es (clientes) ter&atilde;o a m&aacute;scara 255.255.255.0.</P>
 <P ALIGN="JUSTIFY"></P>
-<B><P ALIGN="JUSTIFY">DNS</B> – Domain Name System ?</P>
+<B><P ALIGN="JUSTIFY">DNS</B>  - Domain Name System ?</P>
 <P ALIGN="JUSTIFY"></P>
-<B><P ALIGN="JUSTIFY">SMTP</B> – Simple Mail Transfer Protocol – &Eacute; o protocolo utilizado para ENVIAR as mensagens de e-mail (pelos programas clientes de e-mail como Outlock e Netscape Messager)</P>
+<B><P ALIGN="JUSTIFY">SMTP</B>  - Simple Mail Transfer Protocol  - &Eacute; o protocolo utilizado para ENVIAR as mensagens de e-mail (pelos programas clientes de e-mail como Outlock e Netscape Messager)</P>
 <P ALIGN="JUSTIFY"></P>
-<B><P ALIGN="JUSTIFY">POP</B> – Protocolo utilizado para RECEBER as mensagens de e-mail pelos programas clientes de e-mail.</P>
+<B><P ALIGN="JUSTIFY">POP</B>  - Protocolo utilizado para RECEBER as mensagens de e-mail pelos programas clientes de e-mail.</P>
 <P ALIGN="JUSTIFY"></P>
 <B><P ALIGN="JUSTIFY">PROXY</B> - ?</P>
 <P ALIGN="JUSTIFY"></P>
-<B><P ALIGN="JUSTIFY">FTP</B> – File Transfer Protocol – Procolo de transfer&ecirc;ncia de arquivos. V&aacute;rios sites tem uma interface tipo o Explorer, com pastas e arquivos. Isso caracteriza os sites de FTP, onde existem apenas arquivos para download (baixar) ou upload (enviar). Existem programas expec&iacute;ficos para o envio (upload) e recebimentos de arquivos (download), como o WS FTP, o CUT FTP e outros. A transfer&ecirc;ncia de arquivos por sites de FTP &eacute; sensivelmente mas r&aacute;pida do que por sites de HTTP, j&aacute; que os de FTP s&atilde;o especializados no assunto e n&atilde;o tem as &quot;gorduras&quot; dos sites de HTTP (as p&aacute;ginas convencionais).</P>
+<B><P ALIGN="JUSTIFY">FTP</B>  - File Transfer Protocol  - Procolo de transfer&ecirc;ncia de arquivos. V&aacute;rios sites tem uma interface tipo o Explorer, com pastas e arquivos. Isso caracteriza os sites de FTP, onde existem apenas arquivos para download (baixar) ou upload (enviar). Existem programas expec&iacute;ficos para o envio (upload) e recebimentos de arquivos (download), como o WS FTP, o CUT FTP e outros. A transfer&ecirc;ncia de arquivos por sites de FTP &eacute; sensivelmente mas r&aacute;pida do que por sites de HTTP, j&aacute; que os de FTP s&atilde;o especializados no assunto e n&atilde;o tem as &quot;gorduras&quot; dos sites de HTTP (as p&aacute;ginas convencionais).</P>
 <P ALIGN="JUSTIFY"></P>
-<B><P ALIGN="JUSTIFY">HTTP</B> – Hiper Text Transfer Protocol ?</P>
+<B><P ALIGN="JUSTIFY">HTTP</B>  - Hiper Text Transfer Protocol ?</P>
 <P ALIGN="JUSTIFY"></P>
-<B><P ALIGN="JUSTIFY">TCP/IP</B> – A arquitetura da Internet &eacute; baseada nos dois protocolos: TCP e IP</P>
-<P ALIGN="JUSTIFY">&#9;TCP – Transmission Control Protocol</P>
-<P ALIGN="JUSTIFY">&#9;IP – Internet Protocol</P>
+<B><P ALIGN="JUSTIFY">TCP/IP</B>  - A arquitetura da Internet &eacute; baseada nos dois protocolos: TCP e IP</P>
+<P ALIGN="JUSTIFY">&#9;TCP  - Transmission Control Protocol</P>
+<P ALIGN="JUSTIFY">&#9;IP  - Internet Protocol</P>
 <P ALIGN="JUSTIFY"></P>
-<B><P ALIGN="JUSTIFY">TELNET</B> – Protocolo que permite que um usu&aacute;rio remoto, atrav&eacute;s de uma sess&atilde;o de Terminal, opere como se estivesse no pr&oacute;prio computador distante.</P>
+<B><P ALIGN="JUSTIFY">TELNET</B>  - Protocolo que permite que um usu&aacute;rio remoto, atrav&eacute;s de uma sess&atilde;o de Terminal, opere como se estivesse no pr&oacute;prio computador distante.</P>
 <P ALIGN="JUSTIFY"></P>
-<B><P ALIGN="JUSTIFY">CGI</B> – Common Gatway Interface – Permite intera&ccedil;&atilde;o em p&aacute;ginas WWW, como instrumentos de busca, formul&aacute;rios, etc.</P>
+<B><P ALIGN="JUSTIFY">CGI</B>  - Common Gatway Interface  - Permite intera&ccedil;&atilde;o em p&aacute;ginas WWW, como instrumentos de busca, formul&aacute;rios, etc.</P>
 <P ALIGN="JUSTIFY"></P>
-<B><P ALIGN="JUSTIFY">JAVA</B> – Linguagem de programa&ccedil;&atilde;o, que quando interpretada por um browser, n&atilde;o tem permiss&atilde;o para gravar dados no disco r&iacute;gido, sendo em con sequ&ecirc;ncia uma linguagem segura para o computador do usu&aacute;rio.</P>
+<B><P ALIGN="JUSTIFY">JAVA</B>  - Linguagem de programa&ccedil;&atilde;o, que quando interpretada por um browser, n&atilde;o tem permiss&atilde;o para gravar dados no disco r&iacute;gido, sendo em con sequ&ecirc;ncia uma linguagem segura para o computador do usu&aacute;rio.</P>
 <P ALIGN="JUSTIFY"></P>
-<B><P ALIGN="JUSTIFY">JAVA Script</B> – Uma linguagem adaptada do Java, mais simples, possibilitando o uso em p&aacute;ginas at&eacute; por quem n&atilde;o tem conhecimento de Java.</P>
+<B><P ALIGN="JUSTIFY">JAVA Script</B>  - Uma linguagem adaptada do Java, mais simples, possibilitando o uso em p&aacute;ginas at&eacute; por quem n&atilde;o tem conhecimento de Java.</P>
 <P ALIGN="JUSTIFY"></P>
-<B><P ALIGN="JUSTIFY">APPLETS</B> – Programa escrito em Java, inserido em uma p&aacute;gina html.</P>
+<B><P ALIGN="JUSTIFY">APPLETS</B>  - Programa escrito em Java, inserido em uma p&aacute;gina html.</P>
 <P ALIGN="JUSTIFY"></P>
-<B><P ALIGN="JUSTIFY">PLUGINS</B> – S&atilde;o m&oacute;dulos que podem ser adicionados ao browser com recursos extras, como v&iacute;deo, som, pdf, etc.</P>
+<B><P ALIGN="JUSTIFY">PLUGINS</B>  - S&atilde;o m&oacute;dulos que podem ser adicionados ao browser com recursos extras, como v&iacute;deo, som, pdf, etc.</P>
 <P ALIGN="JUSTIFY"></P>
-<B><P ALIGN="JUSTIFY">URL</B> – Uniform Resource Locator – Endere&ccedil;o exclusivo de recursos da Internet: p&aacute;ginas http, ftp, telnet, etc.</P>
+<B><P ALIGN="JUSTIFY">URL</B>  - Uniform Resource Locator  - Endere&ccedil;o exclusivo de recursos da Internet: p&aacute;ginas http, ftp, telnet, etc.</P>
 <P ALIGN="JUSTIFY"></P>
-<B><P ALIGN="JUSTIFY">WWW</B> – World Wide Web – Grande Rede Muldial. Conjunto de documentos da Internet (em html).</P>
+<B><P ALIGN="JUSTIFY">WWW</B>  - World Wide Web  - Grande Rede Muldial. Conjunto de documentos da Internet (em html).</P>
 <P ALIGN="JUSTIFY"></P>
-<B><P ALIGN="JUSTIFY">LAN</B> – Local Area Network – Rede de alcance local.</P>
+<B><P ALIGN="JUSTIFY">LAN</B>  - Local Area Network  - Rede de alcance local.</P>
 <P ALIGN="JUSTIFY"></P>
-<B><P ALIGN="JUSTIFY">SERVIDOR</B> – Computador que eleva a capacidade de processamento, com a fun&ccedil;&atilde;o de oferecer servi&ccedil;os &agrave; rede. Ficam normalmente em sistemas operacionais mais especializados para rede e potentes e tamb&eacute;m em m&aacute;quinas mais robustas.</P>
+<B><P ALIGN="JUSTIFY">SERVIDOR</B>  - Computador que eleva a capacidade de processamento, com a fun&ccedil;&atilde;o de oferecer servi&ccedil;os &agrave; rede. Ficam normalmente em sistemas operacionais mais especializados para rede e potentes e tamb&eacute;m em m&aacute;quinas mais robustas.</P>
 <P ALIGN="JUSTIFY"></P>
-<B><P ALIGN="JUSTIFY">IPX/SPX</B> – Internet Package eXchange/Sequence Package eXchange. Usado em redes netware de pequeno e m&eacute;dio porte e tem suporte a roteamento.</P>
+<B><P ALIGN="JUSTIFY">IPX/SPX</B>  - Internet Package eXchange/Sequence Package eXchange. Usado em redes netware de pequeno e m&eacute;dio porte e tem suporte a roteamento.</P>
 <P ALIGN="JUSTIFY"></P>
-<B><P ALIGN="JUSTIFY">NET BEUI</B> – Network Basic End User Interface – Pequenas LAN’s, &eacute; r&aacute;pida e simples.</P>
+<B><P ALIGN="JUSTIFY">NET BEUI</B>  - Network Basic End User Interface  - Pequenas LANÂ’s, &eacute; r&aacute;pida e simples.</P>
 <P ALIGN="JUSTIFY"></P>
 <P ALIGN="JUSTIFY">Obs.: Gostaria de agradecer ao Louren&ccedil;o <A HREF="http://www.geocities.ws/cdn-cgi/l/email-protection#42282e2d3730272c212d023637362d322b236c212d2f6c2030"><span class="__cf_email__" data-cfemail="284244475d5a4d464b47685c5d5c47584149064b4745064a5a">[email&#160;protected]</span></A> colega do </P>
 <P ALIGN="JUSTIFY">CT-DNOCS, que me deu os primeiros toques sobre rede: montagem e configura&ccedil;&atilde;o.</P>
