--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
-<html>
-<!-- ARCHIVE by GEOCITIES.WS -->
-
-<!-- Mirrored from www.geocities.ws/ribafsindex/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 30 Apr 2018 10:42:18 GMT -->
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>Sites pessoais de Ribamar FS</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sites pessoais de Ribamar FS</title>
+</head>
+<!-- Mirrored from www.geocities.ws/ribafsindex/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 30 Apr 2018 10:42:18 GMT -->
+
 </head>
 <body><script type="text/javascript" src="../js/policy.js"></script>
-<!-- following code added by server. PLEASE REMOVE -->
-<!-- preceding code added by server. PLEASE REMOVE -->
-<h1 align=center>P·ginas pessoais de Ribamar FS - ribafs</h1>
+<h1 align=center>P√°ginas pessoais de Ribamar FS - ribafs</h1>
 <h2 align=center>Meu site atual - <A href="http://www.ribafs.net/" target=_blank>http://ribafs.net</A></h2>
 
 <HR width="100%">
-<h2 align=center>Bons cursos gr·tis de programaÁ„o web
-<A href="http://cursos.ribafs.net/" target=_blank>Cursos Gr·tis Online</A></h2>
-<center>Este site est· hospedado do Geocities e com redirecionador do dot.tk</center>
+<h2 align=center>Bons cursos gr√°tis de programa√ß√£o web
+<A href="http://cursos.ribafs.net/" target=_blank>Cursos Gr√°tis Online</A></h2>
+<center>Este site est√° hospedado do Geocities e com redirecionador do dot.tk</center>
 <h3 align="center"><a href="http://www.geocities.com/ribafsindex">http://www.geocities.com/ribafsindex</a> ou <a href="http://www.geocities.com/ribafsindex/ribafs.tk">ribafs.tk</a></h3>
 
 <HR align=center width="80%"><BR>
@@ -27,27 +27,27 @@
 
 <HR align=center width="80%">
 <BR>
-<B><FONT size=+1><A href="http://phplibdev.codigolivre.org.br/" target=_blank>35 - Projeto no CÛdigo Livre para o Gerador de PHP com PostgreSQL</A></FONT></B> <BR>
+<B><FONT size=+1><A href="http://phplibdev.codigolivre.org.br/" target=_blank>35 - Projeto no C√≥digo Livre para o Gerador de PHP com PostgreSQL</A></FONT></B> <BR>
 
 <HR align=center width="80%">
 <BR>
 <B><FONT size=+1><A href="http://www.psantos.org/ribafs/access" target=_blank>34 - Espelho do Cantinho do Access</A></FONT></B> <BR>
-<FONT size=+1>Hospedagem gentilmente cedida pelo Paulo Santos (www.psantos.org). Este espelho est· bem mais enxuto que o do Geocities, pois andei arrumando uns links quebrados. Valeu Paulo! :)</FONT> <BR>
+<FONT size=+1>Hospedagem gentilmente cedida pelo Paulo Santos (www.psantos.org). Este espelho est√° bem mais enxuto que o do Geocities, pois andei arrumando uns links quebrados. Valeu Paulo! :)</FONT> <BR>
 
 <HR align=center width="80%">
 <BR>
-<B><FONT size=+1><A href="http://acaosocial1.mebserver.com.br/" target=_blank>33 - Site da AÁ„o Social de Parangaba</A></FONT></B> <BR>
-<FONT size=+1>Site usando o Mambo desenvolvido para a AÁ„o Social de Parangaba</FONT> <BR>
+<B><FONT size=+1><A href="http://acaosocial1.mebserver.com.br/" target=_blank>33 - Site da A√ß√£o Social de Parangaba</A></FONT></B> <BR>
+<FONT size=+1>Site usando o Mambo desenvolvido para a A√ß√£o Social de Parangaba</FONT> <BR>
 
 <HR align=center width="80%">
 <BR>
 <B><FONT size=+1><A href="http://tiagoef.byethost4.com/" target=_blank>32 - TIAGOEF Home Page</A></FONT></B> <BR>
-<FONT size=+1>Site usando o Mambo do meu filho Tiago EF, com boas animaÁıes em flash. (http://tiagoef.tk/)</FONT> <BR>
+<FONT size=+1>Site usando o Mambo do meu filho Tiago EF, com boas anima√ß√µes em flash. (http://tiagoef.tk/)</FONT> <BR>
 
 <HR align=center width="80%">
 <BR>
 <B><FONT size=+1><A href="http://ribafs.byethost2.com/" target=_blank>31 - Cantinho do RibaFS</A></FONT></B> <BR>
-<FONT size=+1>Site usando o Sistema Gerenciador de Conte˙dos Joomla!, com Jogos Online selecionados, tutoriais (PHP, HTML, CSS, JS, MySQL, PostgreSQG, etc), downloads, links e dicas sobre o mesmo. Os iniciantes que querem contruir sites profissionais com facilidade, s„o convidados a experimentar e ler os downloads. Mais um redirecionamento no www.dot.tk (http://ribafsmambo.tk/)</FONT> <BR>
+<FONT size=+1>Site usando o Sistema Gerenciador de Conte√∫dos Joomla!, com Jogos Online selecionados, tutoriais (PHP, HTML, CSS, JS, MySQL, PostgreSQG, etc), downloads, links e dicas sobre o mesmo. Os iniciantes que querem contruir sites profissionais com facilidade, s√£o convidados a experimentar e ler os downloads. Mais um redirecionamento no www.dot.tk (http://ribafsmambo.tk/)</FONT> <BR>
 
 <HR align=center width="80%">
 <BR>
